2010-08-26 John Wu <John dot Wu at ACM dot org>
	* src/mensa.cpp, src/filter.cpp: return a nil pointer from
	table::select and filter::filt if the select clause is incorrect
	from all data partitions (as suggested by Jan Steemann)

2010-08-24 John Wu <John dot Wu at ACM dot org>
	* src/twister.h: clean up doxygen document of the random number
	generators, move continuous random number generators out of
	Mersenne Twister, change all pointers to uniformRandomNumber to
	references

2010-08-23 John Wu <John dot Wu at ACM dot org>
	* src/colValues.cpp:548 change the function swap to operator =,
	using swap causes the new bundle to take over the existing string
	values which destroys the apparently const object (void* helped us
	in circumventing the const-correctness).  This addresses a problem
	reported by Andreas Streichardt

2010-08-23 Peter Tardif <Peter.TARDIF@3ds.com>
	* src/bitvector.cpp: address the problem in the cases where this
	and rhs are not of the same size in operator-

2010-07-22 John Wu <John dot Wu at ACM dot org>
	* src/dictionary.cpp:475 add code to double the size of key_ and
	code_ to avoid array_t::resize incrementing the array sizes one
	element at a time

2010-07-21 John Wu <John dot Wu at ACM dot org>
	* src/array_t.h, src/bitvector.h: add keyword explicit to the
	constructors that may be used as implicitly converters

2010-07-15 John Wu <John dot Wu at ACM dot org>
	* tests/setqgen.cpp:151 compute ceiling of (krow/nrpd) instead of
	floor to ensure the left over rows are written into their own
	partition (not the previous data partition)
	* tests/Makefile.am: update check-sq1 to allow up to 200 Warnings
	(because of the small memory caches used to exercise the memory
	management functions)

2010-07-14 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp, src/mensa.cpp, src/filter.cpp: need to dismiss the
	scope guards after the buffers have been successfully transferred
	to the new table objects (otherwise the new table objects returned